update privacy policy

--- a/src/app/privacy/privacy.component.html
+++ b/src/app/privacy/privacy.component.html
@@ -4,7 +4,7 @@
 		<h2>Privacy</h2>
 		<p>Deze pagina informeert u over de wijze waarop deze website omgaat met uw gegevens.</p>
 		<h3>Cookies</h3>
-		<p>Op deze website worden cookies gebruikt voor Google Analytics en Google AdSense.</p>
+		<p>Op deze website worden cookies gebruikt voor Google Analytics</p>
 		<p>U kunt er voor kiezen om alle, of een deel van de cookies of cookies van derden uit te schakelen in uw browserinstellingen. Tevens kunt u deze instellingen beheren met firewall programma's. Hoewel dit mogelijk is, kan het wel van invloed zijn op de werking van zowel onze, als die van andere websites. Het kan namelijk mogelijk zijn dat u niet meer in staat bent om in te loggen in diverse systemen en programma's.</p>
 		<p>Het verwijderen van cookies betekent niet automatisch dat u deze advertentieprogramma's definitief uitschakeld, tenzij u kunt kiezen om de cookie permanent uit kunt schakelen. Anders zal er weer een nieuwe cookie toegevoegd worden wanneer u de site opnieuw bezoekt.</p>
 		<h3>Advertenties</h3>
