footer menu links

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="footer-container">
     <section class="footer-descr">
-      <h2 class="logo"><a routerLink="/" (click)="toTop()">Belasting-berekenen.nl</a></h2>
+      <h2 class="logo"><a routerLink="/">Belasting-berekenen.nl</a></h2>
       <p>Belasting-berekenen.nl maakt inzichtelijk waar uw belastinggeld naar toe gaat. Wij gebruiken hiervoor de geschatte belasting over uw inkomen, en de meest recente miljoenennota.</p>
     </section>
     <div class="footer-col2">
@@ -9,7 +9,7 @@
         <h3>Quick Links</h3>
         <div>
           <ul>
-            <li><a (click)="clickMenu()" routerLink="/">Home</a></li>
+            <li><a routerLink="/">Home</a></li>
             <li><a (click)="clickMenu()" routerLink="/disclaimer">Disclaimer</a></li>
             <li><a (click)="clickMenu()" routerLink="/privacy-policy">Privacy policy</a></li>
           </ul>
