formatted html files

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,11 @@
 <footer>
   <div class="footer-container">
     <section class="footer-descr">
-      <h2 class="logo"><a routerLink="/">Belasting-berekenen.nl</a></h2>
-      <p>Belasting-berekenen.nl maakt inzichtelijk waar uw belastinggeld naar toe gaat. Wij gebruiken hiervoor de geschatte belasting over uw inkomen, en de meest recente miljoenennota.</p>
+      <h2 class="logo">
+        <a routerLink="/">Belasting-berekenen.nl</a>
+      </h2>
+      <p>Belasting-berekenen.nl maakt inzichtelijk waar uw belastinggeld naar toe gaat. Wij gebruiken hiervoor de
+        geschatte belasting over uw inkomen, en de meest recente miljoenennota.</p>
     </section>
     <div class="footer-col2">
       <section class="footer-ql">
@@ -17,11 +20,11 @@
       </section>
       <section class="footer-contact">
         <h3>Contact</h3>
-          <div>
-            <ul>
-              <li class="mail"><a href="mailto:info@belasting-berekenen.nl">info@belasting-berekenen.nl</a></li>
-            </ul>
-          </div>
+        <div>
+          <ul>
+            <li class="mail"><a href="mailto:info@belasting-berekenen.nl">info@belasting-berekenen.nl</a></li>
+          </ul>
+        </div>
       </section>
     </div>
   </div>
