--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,16 @@
 <header>
   <div class="header-container">
     <div class="header-image">
-      <a routerLink="/home"><img src="assets/images/logo.gif" alt="Belasting berekenen"></a>
+      <a routerLink="/home">
+        <img src="assets/images/logo.gif" alt="Belasting berekenen">
+      </a>
     </div>
     <div class="header-body">
-      <h1 class="logo"><a routerLink="/home">Belasting<span class="lowlight">-</span>berekenen<span class="lowlight">.nl</span></a></h1>
+      <h1 class="logo">
+        <a routerLink="/home">
+          Belasting<span class="lowlight">-</span>berekenen<span class="lowlight">.nl</span>
+        </a>
+      </h1>
       <p>Hoeveel belasting betaalt u?</p>
     </div>
   </div>
