--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,8 +13,8 @@
         <div>
           <ul>
             <li><a routerLink="/">Home</a></li>
-            <li><a (click)="clickMenu()" routerLink="/disclaimer">Disclaimer</a></li>
-            <li><a (click)="clickMenu()" routerLink="/privacy-policy">Privacy policy</a></li>
+            <li><a (click)="onClickFooterMenuItem()" routerLink="/disclaimer">Disclaimer</a></li>
+            <li><a (click)="onClickFooterMenuItem()" routerLink="/privacy-policy">Privacy policy</a></li>
           </ul>
         </div>
       </section>
