moved components to its own folder

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -29,6 +29,6 @@
     </div>
   </div>
   <section class="footer-copyright">
-    <p>{{ year }} &copy; Belasting-berekenen.nl</p>
+    <p>{{ currentYear }} &copy; Belasting-berekenen.nl</p>
   </section>
 </footer>
