--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,7 +1,7 @@
 <section id="hero">
   <div class="hero-container">
     <h2>Bereken nu!</h2>
-    <form #heroInput="ngForm" (ngSubmit)="sendData()">
+    <form #heroInput="ngForm" (ngSubmit)="submit()">
       <div class="form-field" *ngFor="let input of inputs">
         <label for="{{ input.code }}">{{ input.text }}:</label>
         <input id="{{ input.code }}" maxlength="{{ input.maxlength }}" type="text" pattern="[0-9]*" required
