--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div id="wrapper">
   <app-header></app-header>
 
-  <app-hero (dataEvent)="receiveData($event)"></app-hero>
+  <app-hero (totalTax)="receiveData($event)"></app-hero>
 
   <main>
     <app-results [data]="data"></app-results>
