--- a/src/app/components/hero/hero.component.css
+++ b/src/app/components/hero/hero.component.css
@@ -2,14 +2,14 @@
 *****     HERO     *****
 ***********************/
 
-#hero {
+.hero {
   height: 130px;
   width: 100%;
-  background-color: #C3C3E5;
+  background-color: #c3c3e5;
   padding: 20px 0;
 }
 
-#hero h2 {
+.hero h2 {
   line-height: 1.3;
   font-weight: 300;
   font-size: 140%;
@@ -28,7 +28,8 @@ form {
   flex-direction: column;
 }
 
-label, input {
+label,
+input {
   margin: 8px 0;
 }
 
@@ -65,7 +66,8 @@ input:focus {
   outline: 0;
 }
 
-input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
@@ -73,7 +75,8 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 /* Error messages */
 
 @keyframes bounce {
-  0%, 100% {
+  0%,
+  100% {
     font-size: 15px;
   }
   50% {
@@ -98,7 +101,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   transition: all 200ms ease;
 }
 
-.ng-invalid.ng-dirty+.popup-symbol::after {
+.ng-invalid.ng-dirty + .popup-symbol::after {
   content: "\f06a";
   font-size: 19px;
   position: relative;
@@ -139,7 +142,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 }
 
 .btn:hover {
-  background-color: rgba(68, 50, 102, 1.0);
+  background-color: rgba(68, 50, 102, 1);
 }
 
 .btn::after {
