--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -1,26 +1,21 @@
-/***********************
-*****     HERO     *****
-***********************/
-
 .hero {
-  height: 130px;
   width: 100%;
   background-color: #c3c3e5;
   padding: 20px 0;
-}
 
-.hero h2 {
-  line-height: 1.3;
-  font-weight: 300;
-  font-size: 140%;
-  margin-bottom: 15px;
-}
+  &-container {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
-.hero-container {
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  h2 {
+    line-height: 1.3;
+    font-weight: 300;
+    font-size: 140%;
+    margin-bottom: 15px;
+  }
 }
 
 form {
@@ -139,36 +134,36 @@ input[type="number"]::-webkit-outer-spin-button {
   border: 1px solid rgb(68, 50, 102);
   width: 150px;
   align-self: flex-end;
-}
 
-.btn:hover {
-  background-color: rgba(68, 50, 102, 1);
-}
+  &:hover {
+    background-color: rgba(68, 50, 102, 1);
+  }
 
-.btn::after {
-  content: "\f054";
-  font-family: "Font Awesome 5 Free";
-  margin-left: 10px;
-  position: relative;
-  top: 1px;
-  font-size: 100%;
-  font-weight: 600;
-  transition: all 300ms ease;
-}
+  &::after {
+    content: "\f054";
+    font-family: "Font Awesome 5 Free";
+    margin-left: 10px;
+    position: relative;
+    top: 1px;
+    font-size: 100%;
+    font-weight: 600;
+    transition: all 300ms ease;
+  }
 
-.btn:not(:disabled):hover::after {
-  margin-left: 14px;
-  transition: all 300ms ease;
-}
+  &:not(:disabled):hover::after {
+    margin-left: 14px;
+    transition: all 300ms ease;
+  }
 
-.btn:disabled {
-  background-color: #666;
-  color: #999;
-  border-color: #999;
+  &:disabled {
+    background-color: #666;
+    color: #999;
+    border-color: #999;
+  }
 }
 
 @media screen and (min-width: 768px) {
-  #hero {
+  .hero {
     padding: 15px 0 25px 0;
   }
   form {
