--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -21,50 +21,43 @@
 form {
   display: flex;
   flex-direction: column;
-}
 
-label,
-input {
-  margin: 8px 0;
-}
+  label,
+  input {
+    margin: 8px 0;
+  }
 
-label {
-  display: inline-block;
-  width: 65px;
-  line-height: 1.8;
-}
+  label {
+    display: inline-block;
+    width: 65px;
+    line-height: 1.8;
+  }
 
-#income {
-  width: 100px;
-}
+  input {
+    z-index: 20;
+    display: inline-block;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    border-width: 0;
+    border-bottom-width: 1px;
+    border-bottom-color: rgba(0, 0, 0, 0.5);
+    line-height: 1.8;
+    background-color: rgba(255, 255, 255, 0);
+    position: relative;
 
-#age {
-  width: 35px;
-}
+    &#income {
+      width: 100px;
+    }
 
-input {
-  z-index: 20;
-  display: inline-block;
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  font-size: 15px;
-  resize: none;
-  border-width: 0;
-  border-bottom-width: 1px;
-  border-bottom-color: rgba(0, 0, 0, 0.5);
-  line-height: 1.8;
-  background-color: rgba(255, 255, 255, 0);
-  position: relative;
-}
+    &#age {
+      width: 35px;
+    }
 
-input:focus {
-  outline: 0;
-}
-
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    &:focus {
+      outline: 0;
+    }
+  }
 }
 
 /* Error messages */
@@ -105,26 +98,25 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .alert {
-  display: inline-block;
+  position: absolute;
   background-color: rgba(68, 50, 102, 0.8);
   color: #fff;
   padding: 5px 12px;
   text-align: center;
   transition: opacity 250ms ease;
   margin-bottom: 0;
-  left: 10px;
-}
 
-.alert--show {
-  opacity: 1;
-  height: 35.3px;
-}
+  &--show {
+    opacity: 1;
+    height: 35.3px;
+  }
 
-.alert--hide {
-  opacity: 0;
-  height: 0;
-  padding: 0;
-  border: 0;
+  &--hide {
+    opacity: 0;
+    height: 0;
+    padding: 0;
+    border: 0;
+  }
 }
 
 /* submit button */
@@ -166,18 +158,21 @@ input[type="number"]::-webkit-outer-spin-button {
   .hero {
     padding: 15px 0 25px 0;
   }
+
   form {
     flex-direction: row;
     width: 100%;
     position: relative;
-  }
-  .form-field {
-    margin-right: 40px;
-  }
-  .btn {
-    margin-top: 10px;
-    position: absolute;
-    right: 0;
-    top: -13px;
+
+    .form-field {
+      margin-right: 40px;
+    }
+
+    .btn {
+      margin-top: 10px;
+      position: absolute;
+      right: 0;
+      top: -13px;
+    }
   }
 }
