improved hover alert

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -20,7 +20,7 @@
         >
         </span>
         <p
-          class="alert alert-{{ field.id }}"
+          class="alert"
           role="alert"
           [ngClass]="{
             'alert--show': field.showTooltip,
