--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -46,11 +46,11 @@ form {
     background-color: rgba(255, 255, 255, 0);
     position: relative;
 
-    &#income {
+    &.income {
       width: 100px;
     }
 
-    &#age {
+    &.age {
       width: 35px;
     }
 
@@ -79,14 +79,14 @@ form {
   top: 2px;
   left: 6px;
   color: rgba(68, 50, 102, 0.8);
-}
 
-.popup-symbol::after {
-  font-family: "Font Awesome 5 Free";
-  content: "\f059";
-  font-size: 15px;
-  font-weight: 600;
-  transition: all 200ms ease;
+  &::after {
+    font-family: "Font Awesome 5 Free";
+    content: "\f059";
+    font-size: 15px;
+    font-weight: 600;
+    transition: all 200ms ease;
+  }
 }
 
 .ng-invalid.ng-dirty + .popup-symbol::after {
@@ -162,7 +162,7 @@ form {
     width: 100%;
     position: relative;
 
-    .form-field {
+    .form-field:first-of-type {
       margin-right: 40px;
     }
 
