--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,31 +1,37 @@
 <section class="hero">
   <div class="hero-container">
-    <h2>Bereken nu!</h2>
-    <form #form="ngForm" (ngSubmit)="submit()">
+    <h2 class="hero__title">Bereken nu!</h2>
+    <form class="hero__form" #form="ngForm" (ngSubmit)="submit()" novalidate>
       <div class="form-field" *ngFor="let field of fields">
-        <label [attr.for]="field.id">{{ field.label }}:</label>
+        <label class="form-field__label" [attr.for]="field.id"
+          >{{ field.label }}:</label
+        >
         <input
+          #input="ngModel"
           type="text"
           pattern="[0-9]*"
           required
-          [class]="field.id"
+          class="form-field__input"
           [id]="field.id"
           [attr.maxlength]="field.maxLength"
           [name]="field.id"
           [(ngModel)]="field.value"
         />
         <span
-          class="popup-symbol"
+          class="form-field__alert-symbol"
+          [ngClass]="{
+            'form-field__alert-symbol--invalid': input.dirty && input.invalid
+          }"
           (mouseenter)="field.showTooltip = true"
           (mouseleave)="field.showTooltip = false"
         >
         </span>
         <p
-          class="alert"
+          class="form-field__alert-text"
           role="alert"
           [ngClass]="{
-            'alert--show': field.showTooltip,
-            'alert--hide': !field.showTooltip
+            'form-field__alert-text--show': field.showTooltip,
+            'form-field__alert-text--hide': !field.showTooltip
           }"
         >
           {{ field.tooltip }}
@@ -33,7 +39,7 @@
       </div>
       <button
         type="submit"
-        class="btn btn-primary"
+        class="hero__form-btn btn btn-primary"
         [disabled]="!form.form.valid"
       >
         Bereken
