--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -10,30 +10,65 @@
     justify-content: space-between;
   }
 
-  h2 {
+  &__title {
     line-height: 1.3;
     font-weight: 300;
     font-size: 140%;
     margin-bottom: 15px;
   }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+
+    &-btn {
+      background-color: rgba(68, 50, 102, 0.8);
+      border: 1px solid rgb(68, 50, 102);
+      width: 150px;
+      align-self: flex-end;
+
+      &:hover {
+        background-color: rgba(68, 50, 102, 1);
+      }
+
+      &::after {
+        content: "\f054";
+        font-family: "Font Awesome 5 Free";
+        margin-left: 10px;
+        position: relative;
+        top: 1px;
+        font-size: 100%;
+        font-weight: 600;
+        transition: all 300ms ease;
+      }
+
+      &:not(:disabled):hover::after {
+        margin-left: 14px;
+        transition: all 300ms ease;
+      }
+
+      &:disabled {
+        background-color: #666;
+        color: #999;
+        border-color: #999;
+      }
+    }
+  }
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-
-  label,
-  input {
+.form-field {
+  &__label,
+  &__input {
     margin: 8px 0;
   }
 
-  label {
+  &__label {
     display: inline-block;
     width: 65px;
     line-height: 1.8;
   }
 
-  input {
+  &__input {
     z-index: 20;
     display: inline-block;
     font-family: "Open Sans", sans-serif;
@@ -46,11 +81,11 @@ form {
     background-color: rgba(255, 255, 255, 0);
     position: relative;
 
-    &.income {
+    &#income {
       width: 100px;
     }
 
-    &.age {
+    &#age {
       width: 35px;
     }
 
@@ -58,10 +93,85 @@ form {
       outline: 0;
     }
   }
+
+  &__alert-symbol {
+    cursor: pointer;
+    position: relative;
+    transition: all 200ms ease;
+    top: 2px;
+    left: 6px;
+    color: rgba(68, 50, 102, 0.8);
+
+    &::after {
+      font-family: "Font Awesome 5 Free";
+      content: "\f059";
+      font-size: 15px;
+      font-weight: 600;
+      transition: all 200ms ease;
+    }
+
+    &--invalid::after {
+      content: "\f06a";
+      font-size: 19px;
+      position: relative;
+      transition: all 200ms ease;
+      animation: bounce 1s infinite;
+    }
+  }
+
+  &__alert-text {
+    display: inline-block;
+    background-color: rgba(68, 50, 102, 0.8);
+    color: #fff;
+    padding: 4px 6px;
+    text-align: center;
+    transition: opacity 250ms ease;
+    margin-left: 20px;
+    margin-bottom: 0;
+    font-size: 12px;
+
+    &--show {
+      opacity: 1;
+    }
+
+    &--hide {
+      opacity: 0;
+    }
+  }
 }
 
-/* Error messages */
+@media screen and (min-width: 768px) {
+  .hero {
+    padding: 15px 0;
 
+    &__form {
+      flex-direction: row;
+      width: 100%;
+      position: relative;
+
+      &-btn {
+        position: absolute;
+        right: 0;
+      }
+    }
+  }
+
+  .form-field {
+    &:first-of-type {
+      margin-right: 40px;
+    }
+
+    &__alert-text {
+      display: block;
+      position: relative;
+      left: 50%;
+      top: 4px;
+      margin-left: 0;
+    }
+  }
+}
+
+/* Animation for alert symbol */
 @keyframes bounce {
   0%,
   100% {
@@ -69,114 +179,5 @@ form {
   }
   50% {
     font-size: 19px;
-  }
-}
-
-.popup-symbol {
-  cursor: pointer;
-  position: relative;
-  transition: all 200ms ease;
-  top: 2px;
-  left: 6px;
-  color: rgba(68, 50, 102, 0.8);
-
-  &::after {
-    font-family: "Font Awesome 5 Free";
-    content: "\f059";
-    font-size: 15px;
-    font-weight: 600;
-    transition: all 200ms ease;
-  }
-}
-
-.ng-invalid.ng-dirty + .popup-symbol::after {
-  content: "\f06a";
-  font-size: 19px;
-  position: relative;
-  transition: all 200ms ease;
-  animation: bounce 1s infinite;
-}
-
-.alert {
-  display: inline-block;
-  background-color: rgba(68, 50, 102, 0.8);
-  color: #fff;
-  padding: 4px 6px;
-  text-align: center;
-  transition: opacity 250ms ease;
-  margin-left: 20px;
-  margin-bottom: 0;
-  font-size: 12px;
-
-  &--show {
-    opacity: 1;
-  }
-
-  &--hide {
-    opacity: 0;
-  }
-}
-
-/* submit button */
-
-.btn {
-  background-color: rgba(68, 50, 102, 0.8);
-  border: 1px solid rgb(68, 50, 102);
-  width: 150px;
-  align-self: flex-end;
-
-  &:hover {
-    background-color: rgba(68, 50, 102, 1);
-  }
-
-  &::after {
-    content: "\f054";
-    font-family: "Font Awesome 5 Free";
-    margin-left: 10px;
-    position: relative;
-    top: 1px;
-    font-size: 100%;
-    font-weight: 600;
-    transition: all 300ms ease;
-  }
-
-  &:not(:disabled):hover::after {
-    margin-left: 14px;
-    transition: all 300ms ease;
-  }
-
-  &:disabled {
-    background-color: #666;
-    color: #999;
-    border-color: #999;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .hero {
-    padding: 15px 0;
-  }
-
-  form {
-    flex-direction: row;
-    width: 100%;
-    position: relative;
-
-    .form-field:first-of-type {
-      margin-right: 40px;
-    }
-
-    .btn {
-      position: absolute;
-      right: 0;
-    }
-  }
-
-  .alert {
-    display: block;
-    position: relative;
-    left: 50%;
-    top: 4px;
-    margin-left: 0;
   }
 }
