--- a/src/app/components/results/results.component.html
+++ b/src/app/components/results/results.component.html
@@ -18,7 +18,7 @@
         [style.height.px]="(getBoxSize(line.amount) / 100) * graph.offsetWidth"
         [style.left.px]="(positions[i].left / 100) * graph.offsetWidth"
         [style.bottom.px]="(positions[i].bottom / 100) * graph.offsetWidth"
-        [style.transition-delay.ms]="i * 200"
+        [style.transition-delay.ms]="i * loadingDelay"
       >
         <div
           class="box__number"
@@ -36,7 +36,7 @@
           *ngIf="line.showInfo"
           [style.left.px]="0.5 * container.clientWidth + correctHover(container, results)"
         >
-          <span [style.left.px]="0.5 * boxInfo.clientWidth - 8 - correctHover(container, results)"
+          <span [style.left.px]="0.5 * boxInfo.clientWidth - correctHover(container, results)"
             >arrow up</span
           >
           <p>
