--- a/src/app/components/results/results.component.html
+++ b/src/app/components/results/results.component.html
@@ -13,9 +13,9 @@
       <div
         #container
         class="box"
-        *ngFor="let line of budget; index as i"
-        [style.width.%]="getBoxSize(line.amount)"
-        [style.height.px]="(getBoxSize(line.amount) / 100) * graph.offsetWidth"
+        *ngFor="let item of budget; index as i"
+        [style.width.%]="getBoxSize(item.amount)"
+        [style.height.px]="(getBoxSize(item.amount) / 100) * graph.offsetWidth"
         [style.left.px]="(positions[i].left / 100) * graph.offsetWidth"
         [style.bottom.px]="(positions[i].bottom / 100) * graph.offsetWidth"
         [style.transition-delay.ms]="i * loadingDelay"
@@ -23,26 +23,26 @@
         <div
           class="box__number"
           [style.height.px]="container.offsetWidth"
-          (mouseenter)="line.showInfo = true"
-          (mouseleave)="line.showInfo = false"
+          (mouseenter)="item.showInfo = true"
+          (mouseleave)="item.showInfo = false"
         >
           <p [style.font-size.px]="container.offsetWidth / 3">
-            &euro;{{ (line.amount / totalBudget) * totalTax | number: "1.0-0" }}
+            &euro;{{ (item.amount / totalBudget) * totalTax | number: "1.0-0" }}
           </p>
         </div>
         <div
           #boxInfo
           class="box__info"
-          *ngIf="line.showInfo"
+          *ngIf="item.showInfo"
           [style.left.px]="0.5 * container.clientWidth + correctHover(container, results)"
         >
           <span [style.left.px]="0.5 * boxInfo.clientWidth - correctHover(container, results)"
             >arrow up</span
           >
           <p>
-            U betaalt &euro;{{ (line.amount / totalBudget) * totalTax | number: "1.2-2" }} per maand
+            U betaalt &euro;{{ (item.amount / totalBudget) * totalTax | number: "1.2-2" }} per maand
             voor
-            <span>{{ line.long }}</span>
+            <span>{{ item.long }}</span>
           </p>
         </div>
       </div>
