--- a/src/styles.css
+++ b/src/styles.css
@@ -1,88 +1,172 @@
+/*** Global Styling **********
+***** Belasting-berekenen ***/
 
-/*
-** Styling *****************
-***** Belasting-berekenen **
-*/
-
-/* CSS reset */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+/***********************
+****   CSS RESET    ****
+***********************/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline; 
+  vertical-align: baseline;
 }
 
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block; 
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 
 body {
-  line-height: 1; 
+  line-height: 1;
 }
 
-ol, ul {
-  list-style: none; 
+ol,
+ul {
+  list-style: none;
 }
 
-blockquote, q {
-  quotes: none; 
+blockquote,
+q {
+  quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none; 
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 
 table {
   border-collapse: collapse;
-  border-spacing: 0; 
+  border-spacing: 0;
 }
-
 
 /***********************
 *****   GENERAL    *****
 ***********************/
 
-html, body {height: 100%;}
-html {scroll-behavior: smooth;}
+html,
+body {
+  height: 100%;
+}
+
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   font-family: "Open Sans", sans-serif;
-  /* font-family: Roboto, "Helvetica Neue", sans-serif; */
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; 
+  -moz-osx-font-smoothing: grayscale;
 }
 
 #wrapper {
   min-width: 360px;
   width: 100%;
-  position: relative; 
+  position: relative;
 }
 
 a {
   text-decoration: none;
-  border-bottom: 1px dotted #443266; 
+  border-bottom: 1px dotted #443266;
 }
 
 a:hover {
   border-bottom-style: solid;
-  text-decoration: none; 
+  text-decoration: none;
 }
 
 .header-container,
@@ -91,59 +175,59 @@ a:hover {
 .content-container,
 .footer-container {
   margin: 0 auto;
-  position: relative; 
+  position: relative;
 }
 
-.singlePageHeading p, 
+.singlePageHeading p,
 .accordion p {
   color: rgba(0, 0, 0, 0.5);
-  -webkit-text-stroke: 0.2px rgba(0, 0, 0, 0.5); 
+  -webkit-text-stroke: 0.2px rgba(0, 0, 0, 0.5);
 }
 
-.btn, 
-.singlePageHeading h2, 
-.singlePageHeading p, 
-footer a, 
+.btn,
+.singlePageHeading h2,
+.singlePageHeading p,
+footer a,
 .errorpage-content span {
   color: #fff;
-  -webkit-text-stroke: 0.2px rgba(255, 255, 255, 0.5); 
+  -webkit-text-stroke: 0.2px rgba(255, 255, 255, 0.5);
 }
 
-p, 
+p,
 #hero h2 {
   color: #000;
-  -webkit-text-stroke: 0.2px rgba(0, 0, 0, 0.5); 
+  -webkit-text-stroke: 0.2px rgba(0, 0, 0, 0.5);
 }
 
-a, 
+a,
 .accordion h3::after {
   color: #443266;
-  -webkit-text-stroke: 0.2px rgba(68, 50, 102, 0.5); 
+  -webkit-text-stroke: 0.2px rgba(68, 50, 102, 0.5);
 }
 
-footer p, 
-footer h3, 
+footer p,
+footer h3,
 footer a:hover,
 footer a::before {
-  color: #C3C3E5;
-  -webkit-text-stroke: 0.1px rgba(195, 195, 229, 0.5); 
+  color: #c3c3e5;
+  -webkit-text-stroke: 0.1px rgba(195, 195, 229, 0.5);
 }
 
 .lowlight {
-  color: #8C489F;
-  -webkit-text-stroke: 0.2px rgba(140, 72, 159, 0.5); 
+  color: #8c489f;
+  -webkit-text-stroke: 0.2px rgba(140, 72, 159, 0.5);
 }
 
-.logo, 
-.logo a, 
+.logo,
+.logo a,
 header p {
-  color: #F1F0FF;
-  -webkit-text-stroke: 0.2px rgba(241, 240, 255, 0.5); 
+  color: #f1f0ff;
+  -webkit-text-stroke: 0.2px rgba(241, 240, 255, 0.5);
 }
 
 p {
   font-size: 14px;
-  line-height: 1.7; 
+  line-height: 1.7;
 }
 
 .logo {
@@ -153,20 +237,21 @@ p {
   font-size: 165%;
   letter-spacing: 1px;
   transition: all 500ms ease;
-  -webkit-user-select: none;  /* Chrome + Safari */
-  -moz-user-select: none;     /* Firefox */
-  -ms-user-select: none;      /* IE 10+ */
-  user-select: none; 
+  -webkit-user-select: none; /* Chrome + Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE 10+ */
+  user-select: none;
 }
 
 .logo a {
   transition: all 500ms ease;
 }
 
-h2, h3 {
+h2,
+h3 {
   font-family: "Dosis", sans-serif;
   font-weight: 400;
-  line-height: 1.2; 
+  line-height: 1.2;
 }
 
 /* to top button */
@@ -202,7 +287,7 @@ h2, h3 {
   top: 9px;
   left: 12px; 
 } */
-  
+
 /***********************
 ****     PAGES     *****
 ***********************/
@@ -210,13 +295,13 @@ h2, h3 {
   width: 100%;
   background-size: cover;
   padding: 75px 0;
-  position: relative; 
+  position: relative;
 }
 
 .singlePageHeading h2 {
   text-align: center;
   font-size: 250%;
-  font-weight: 500; 
+  font-weight: 500;
 }
 
 .singlePageHeading p {
@@ -224,57 +309,16 @@ h2, h3 {
   font-style: italic;
   font-size: 100%;
   font-family: "Dosis", sans-serif;
-  font-weight: 400; 
+  font-weight: 400;
 }
-  
-.singlePageHeading h2, 
+
+.singlePageHeading h2,
 .singlePageHeading p {
   padding: 0 5%;
   position: relative;
   top: 10px;
   opacity: 0;
-  transition: all 500ms ease-in; 
-}
-
-/***********************
-*****    CONTENT   *****
-***********************/
-#content h2 {
-  font-size: 150%;
-  margin: 30px 0 10px 0; 
-}
-
-#content h3 {
-  font-size: 130%;
-  margin: 25px 0 8px 0; 
-}
-
-#content p {
-  margin-bottom: 15px; 
-}
-
-#content img {
-  width: 100%;
-  max-width: 500px;
-  margin: 10px 0 5px 0; 
-}
-
-#content figcaption {
-  font-size: 90%; 
-}
-
-.content-container,
-.results-container {
-  width: 90%; 
-}
-
-@media screen and (min-width: 480px) {
-    
-#content figure {
-  float: right;
-  width: 50%;
-  margin: 0 0 20px 20px;
-  position: relative; } 
+  transition: all 500ms ease-in;
 }
 
 /*****************
@@ -285,7 +329,8 @@ h2, h3 {
   .hero-container,
   .content-container,
   .footer-container {
-    max-width: 1000px; }
+    max-width: 1000px;
+  }
 }
 
 /*********************
@@ -296,6 +341,6 @@ h2, h3 {
   .two-col {
     max-width: 1200px;
     margin-left: auto;
-    margin-right: auto; 
-  } 
+    margin-right: auto;
+  }
 }
