updated privacy, disclaimer page, global styling

--- a/src/app/components/disclaimer/disclaimer.component.html
+++ b/src/app/components/disclaimer/disclaimer.component.html
@@ -1,24 +1,36 @@
-<section id="content">
+<section class="content">
   <div class="content-container">
     <h2>Disclaimer</h2>
-    <p>Door deze website te bezoeken en/of de op of via deze website aangeboden informatie te gebruiken, verklaart u
-      zich akkoord met de toepasselijkheid van deze disclaimer.</p>
+    <p>
+      Door deze website te bezoeken en/of de op of via deze website aangeboden informatie te
+      gebruiken, verklaart u zich akkoord met de toepasselijkheid van deze disclaimer.
+    </p>
     <h3>Gebruik van de website</h3>
-    <p>De informatie op deze website is uitsluitend bedoeld als algemene informatie. Er kunnen geen rechten aan de
-      informatie op deze website worden ontleend. Hoewel Belasting-berekenen.nl zorgvuldigheid in acht neemt bij het
-      samenstellen en onderhouden van deze website en daarbij gebruik maakt van bronnen die betrouwbaar geacht worden,
-      kunnen wij niet instaan voor de juistheid, volledigheid en actualiteit van de geboden informatie. Wij garanderen
-      niet dat de website foutloos of ononderbroken zal functioneren of vrij zijn van virussen. Belasting-berekenen.nl
-      wijst iedere aansprakelijkheid ten aanzien van de juistheid, volledigheid, actualiteit van de geboden informatie
-      en het (ongestoord) gebruik van deze website uitdrukkelijk van de hand.</p>
+    <p>
+      De informatie op deze website is uitsluitend bedoeld als algemene informatie. Er kunnen geen
+      rechten aan de informatie op deze website worden ontleend. Hoewel Belasting-berekenen.nl
+      zorgvuldigheid in acht neemt bij het samenstellen en onderhouden van deze website en daarbij
+      gebruik maakt van bronnen die betrouwbaar geacht worden, kunnen wij niet instaan voor de
+      juistheid, volledigheid en actualiteit van de geboden informatie. Wij garanderen niet dat de
+      website foutloos of ononderbroken zal functioneren of vrij zijn van virussen.
+      Belasting-berekenen.nl wijst iedere aansprakelijkheid ten aanzien van de juistheid,
+      volledigheid, actualiteit van de geboden informatie en het (ongestoord) gebruik van deze
+      website uitdrukkelijk van de hand.
+    </p>
     <h3>Informatie gebruiken</h3>
-    <p>Het is niet toegestaan om de aangeboden informatie, waaronder alle teksten, grafisch materiaal en logo's waarvan
-      de intellectuele eigenschappen berusten bij Belasting-berekenen.nl te kopiëren en te verspreiden zonder
-      voorafgaande schriftelijke toestemming van Zonnemeting.nl. Uiteraard zijn verkregen animaties een uitzondering
-      hierop: u bent vrij deze te gebruiken en te delen.</p>
+    <p>
+      Het is niet toegestaan om de aangeboden informatie, waaronder alle teksten, grafisch materiaal
+      en logo's waarvan de intellectuele eigenschappen berusten bij Belasting-berekenen.nl te
+      kopiëren en te verspreiden zonder voorafgaande schriftelijke toestemming van Zonnemeting.nl.
+      Uiteraard zijn verkregen animaties een uitzondering hierop: u bent vrij deze te gebruiken en
+      te delen.
+    </p>
     <h3>Wijzigingen</h3>
-    <p>Wij hebben het recht de aangeboden informatie, met inbegrip van deze disclaimer, te allen tijde te wijzigen
-      zonder hiervan nadere aankondiging te doen. Het is raadzaam om regelmatig te controleren of de op of via deze
-      website aangeboden informatie, met inbegrip van deze disclaimer, gewijzigd is.</p>
+    <p>
+      Wij hebben het recht de aangeboden informatie, met inbegrip van deze disclaimer, te allen
+      tijde te wijzigen zonder hiervan nadere aankondiging te doen. Het is raadzaam om regelmatig te
+      controleren of de op of via deze website aangeboden informatie, met inbegrip van deze
+      disclaimer, gewijzigd is.
+    </p>
   </div>
 </section>
