--- a/src/styles.scss
+++ b/src/styles.scss
@@ -162,31 +162,32 @@ body {
 a {
   text-decoration: none;
   border-bottom: 1px dotted #443266;
-}
 
-a:hover {
-  border-bottom-style: solid;
-  text-decoration: none;
+  &:hover {
+    border-bottom-style: solid;
+    text-decoration: none;
+  }
 }
 
 .header-container,
 .hero-container,
 .results-container,
-.content-container,
 .footer-container {
   margin: 0 auto;
   position: relative;
 }
 
-.singlePageHeading p,
+.content-container {
+  margin: 25px auto 50px;
+  position: relative;
+}
+
 .accordion p {
   color: rgba(0, 0, 0, 0.5);
   -webkit-text-stroke: 0.2px rgba(0, 0, 0, 0.5);
 }
 
 .btn,
-.singlePageHeading h2,
-.singlePageHeading p,
 footer a,
 .errorpage-content span {
   color: #fff;
@@ -254,71 +255,49 @@ h3 {
   line-height: 1.2;
 }
 
-/* to top button */
-/* #to-top {
-  display: block;
-  position: fixed;
-  right: 25px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: #F1F0FF;
-  border: rgba(0, 0, 0, 0.25);
-  box-shadow: 1px 3px 12px 2px rgba(0, 0, 0, 0.2);
-  z-index: 120;
-  cursor: pointer;
-  bottom: -45px;
-  transition: all 500ms ease; 
-}
-
-#to-top:hover {
-  background-color: #443266;
-  transition: all 500ms ease; 
-}
-
-#to-top .fa-chevron-up span {
-  font-size: 0; 
-}
-
-#to-top .fa-chevron-up {
-  color: #fff;
-  font-size: 18px;
-  position: relative;
-  top: 9px;
-  left: 12px; 
-} */
-
 /***********************
-****     PAGES     *****
+****     CONTENT    ****
 ***********************/
-.singlePageHeading {
-  width: 100%;
-  background-size: cover;
-  padding: 75px 0;
-  position: relative;
+
+.content {
+  &-container {
+    width: 90%;
+  }
+
+  h2 {
+    font-size: 150%;
+    margin: 30px 0 10px 0;
+  }
+
+  h3 {
+    font-size: 130%;
+    margin: 25px 0 8px 0;
+  }
+
+  p {
+    margin-bottom: 15px;
+  }
+
+  figure {
+    img {
+      width: 100%;
+      max-width: 500px;
+      margin: 10px 0 5px 0;
+    }
+
+    figcaption {
+      font-size: 90%;
+    }
+  }
 }
 
-.singlePageHeading h2 {
-  text-align: center;
-  font-size: 250%;
-  font-weight: 500;
-}
-
-.singlePageHeading p {
-  text-align: center;
-  font-style: italic;
-  font-size: 100%;
-  font-family: "Dosis", sans-serif;
-  font-weight: 400;
-}
-
-.singlePageHeading h2,
-.singlePageHeading p {
-  padding: 0 5%;
-  position: relative;
-  top: 10px;
-  opacity: 0;
-  transition: all 500ms ease-in;
+@media screen and (min-width: 480px) {
+  .content figure {
+    float: right;
+    width: 50%;
+    margin: 0 0 20px 20px;
+    position: relative;
+  }
 }
 
 /*****************
