--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,17 +1,17 @@
-<header>
+<header class="header">
   <div class="header-container">
-    <div class="header-image">
+    <div class="header__logo">
       <a routerLink="/home">
-        <img src="assets/images/logo.gif" alt="Belasting berekenen">
+        <img src="assets/images/logo.gif" alt="Belasting berekenen.nl" />
       </a>
     </div>
-    <div class="header-body">
+    <div class="header__body">
       <h1 class="logo">
         <a routerLink="/home">
           Belasting<span class="lowlight">-</span>berekenen<span class="lowlight">.nl</span>
         </a>
       </h1>
-      <p>Hoeveel belasting betaalt u?</p>
+      <p class="subtitle">Hoeveel belasting betaalt u?</p>
     </div>
   </div>
 </header>
