--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -15,6 +15,8 @@
     font-weight: 300;
     font-size: 140%;
     margin-bottom: 15px;
+    color: #000;
+    -webkit-text-stroke: 0.2px rgba(0, 0, 0, 0.5);
   }
 
   &__form {
